update to 2.3